<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Video Stream</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="connect">Connect</string>
    <string name="title_activity_video">VideoActivity</string>
    <string name="serverIp">Server IP</string>
    <string name="serverPort">Port</string>
    <string name="find">Find</string>
    <string name="disconnect">Disconnect</string>

</resources>
