<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relLayout1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/tf_serverIP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/serverIp" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/tf_serverPort"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="17dp"
            android:layout_weight="0.53"
            android:ems="10"
            android:hint="@string/serverPort"
            android:inputType="number" />

        <Button
            android:id="@+id/btnFindServer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="buttonFindServerClickListener"
            android:text="@string/find" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/btnConnect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="84dp"
                android:layout_marginTop="43dp"
                android:onClick="buttonConnectClickListener"
                android:text="@string/connect" />

            <Button
                android:id="@+id/btnDisconnect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="buttonDisconnectClickListener"
                android:text="@string/disconnect" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>